@@ -236,7 +236,7 @@
                             <target>${maven.compiler.target}</target>
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
-                                <arg>--add-module</arg>
+                                <arg>--add-modules</arg>
                                 <arg>org.eclipse.swt.cocoa.macosx.x86_64</arg>
                             </compilerArgs>
                         </configuration>
@@ -271,7 +271,7 @@
                             <target>${maven.compiler.target}</target>
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
-                                <arg>--add-module</arg>
+                                <arg>--add-modules</arg>
                                 <arg>org.eclipse.swt.gtk.linux.ppc64le</arg>
                             </compilerArgs>
                         </configuration>
@@ -305,7 +305,7 @@
                             <target>${maven.compiler.target}</target>
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
-                                <arg>--add-module</arg>
+                                <arg>--add-modules</arg>
                                 <arg>org.eclipse.swt.win32.win32.x86_64</arg>
                             </compilerArgs>
                         </configuration>
